# labs

./: rle.cpp  լաբ1.docx
Lab3/: CMakeLists.txt  README.md  Ծրագրային ապահովման անվտանգություն Լաբ3.docx
Lab3/src/: HardwareID.cpp
Lab5/: Lab5.sln
Lab5/Lab5/: CMakeLists.txt  Lab5.vcxproj  Lab5.vcxproj.filters
Lab5/Lab5/src/: main.cpp  usb_detector.cpp  utils.cpp  utils.h
Lab5/Lab5/x64/Debug/: Lab5.exe.recipe  ProtectUSB.exe.recipe
Lab5/Lab5/x64/Debug/Lab5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab1/: system_info  system_info.cpp  system_info.sh
